# Siamese-Network-Signature

./: pyproject.toml
notebooks/: Signtinel_Siamese_Network.ipynb
signtinel/: app.py
