[tool.poetry]
name = "signtinel"
version = "0.1.0"
description = ""
authors = ["albertocj1 <albertochristianjoshua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.3.0"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
